--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<table>
 		<tr><td><a href="list.erb">蔵書データの表示</a></td></tr>
 		<tr><td><a href="entry.erb">蔵書データの登録</a></td></tr>
-		<tr><td><a href="retriebe.erb">蔵書データの検索</a></td></tr>
+		<tr><td><a href="retrieve.erb">蔵書データの検索</a></td></tr>
 	</table>
 	<hr>
 </body>
